samples/_failures_safe/1761552474_431282_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5fec7ea5.c: In function ‘main’:
./samples/SAFE/__tmp_5fec7ea5.c:166:5: error: expected expression at end of input
  166 |     if (scanf("%d", &
      |     ^~
./samples/SAFE/__tmp_5fec7ea5.c:166:5: error: expected declaration or statement at end of input
